deploy: cdd36f3c20f7a6d089b525ee83db79aa7af4dba2

--- a/inherits.html
+++ b/inherits.html
@@ -139,42 +139,47 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classPowArray.html" title=" " alt="" coords="5,5,128,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aqdd_1_1child" alt=""/>
+<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aPowMatrix_3_01T_01_4" alt=""/>
+<map name="aPowMatrix_3_01T_01_4" id="aPowMatrix_3_01T_01_4">
+<area shape="rect" href="classPowMatrix.html" title=" " alt="" coords="5,5,135,31"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_9.png" border="0" usemap="#aqdd_1_1child" alt=""/>
 <map name="aqdd_1_1child" id="aqdd_1_1child">
 <area shape="rect" href="structqdd_1_1child.html" title=" " alt="" coords="5,5,91,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_9.png" border="0" usemap="#aqdd_1_1Node" alt=""/>
+<tr><td><img src="inherit_graph_10.png" border="0" usemap="#aqdd_1_1Node" alt=""/>
 <map name="aqdd_1_1Node" id="aqdd_1_1Node">
 <area shape="rect" href="classqdd_1_1Node.html" title=" " alt="" coords="5,5,93,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_10.png" border="0" usemap="#aqdd_1_1QDD" alt=""/>
+<tr><td><img src="inherit_graph_11.png" border="0" usemap="#aqdd_1_1QDD" alt=""/>
 <map name="aqdd_1_1QDD" id="aqdd_1_1QDD">
 <area shape="rect" href="classqdd_1_1QDD.html" title=" " alt="" coords="5,5,89,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_11.png" border="0" usemap="#aqdd_1_1status__vector_3_01N_01_4" alt=""/>
+<tr><td><img src="inherit_graph_12.png" border="0" usemap="#aqdd_1_1status__vector_3_01N_01_4" alt=""/>
 <map name="aqdd_1_1status__vector_3_01N_01_4" id="aqdd_1_1status__vector_3_01N_01_4">
 <area shape="rect" href="structqdd_1_1status__vector.html" title=" " alt="" coords="5,5,188,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_12.png" border="0" usemap="#aselection_1_1mergees" alt=""/>
+<tr><td><img src="inherit_graph_13.png" border="0" usemap="#aselection_1_1mergees" alt=""/>
 <map name="aselection_1_1mergees" id="aselection_1_1mergees">
 <area shape="rect" href="structselection_1_1mergees.html" title="Struct containing two Diagram pointers." alt="" coords="5,5,152,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_13.png" border="0" usemap="#aStatement" alt=""/>
+<tr><td><img src="inherit_graph_14.png" border="0" usemap="#aStatement" alt=""/>
 <map name="aStatement" id="aStatement">
 <area shape="rect" href="classStatement.html" title=" " alt="" coords="5,5,96,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_14.png" border="0" usemap="#astatementString" alt=""/>
+<tr><td><img src="inherit_graph_15.png" border="0" usemap="#astatementString" alt=""/>
 <map name="astatementString" id="astatementString">
 <area shape="rect" href="structstatementString.html" title=" " alt="" coords="5,5,132,31"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_15.png" border="0" usemap="#astd_1_1runtime__error" alt=""/>
+<tr><td><img src="inherit_graph_16.png" border="0" usemap="#astd_1_1runtime__error" alt=""/>
 <map name="astd_1_1runtime__error" id="astd_1_1runtime__error">
 <area shape="rect" title=" " alt="" coords="5,104,144,129"/>
 <area shape="rect" href="classParsingError.html" title="Exception thrown when a parsing error occurs." alt="" coords="192,104,292,129"/>
@@ -191,7 +196,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="poly" title=" " alt="" coords="271,136,341,188,365,200,362,205,339,192,268,141"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_16.png" border="0" usemap="#avar_3_01T_01_4" alt=""/>
+<tr><td><img src="inherit_graph_17.png" border="0" usemap="#avar_3_01T_01_4" alt=""/>
 <map name="avar_3_01T_01_4" id="avar_3_01T_01_4">
 <area shape="rect" href="structvar.html" title="A template structure representing a variable." alt="" coords="5,5,87,31"/>
 </map>
