deploy: 68f6e75aec35fa28f440646fc98aab4b554b1ec2

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 <p>Theoretical research, experiments and implementation of <em>abstract additive quantum decision diagrams</em>, as part of a student research project.</p>
 <h1><a class="anchor" id="autotoc_md1"></a>
 Building</h1>
-<p>To build the project, you must have CLang, CMake and Ninja installed. The code uses some C++23 features, so a recent version of CLang++ is required. <em>Other versions probably work</em>, but I personally use the following on my machine:</p><ul>
-<li>CLang 19.1.6</li>
+<p>To build the project, you must have Clang, CMake and Ninja installed. The code uses some C++23 features, so a recent version of <code>clang++</code> is required. <em>Other versions probably work</em>, but I personally use the following on my machine:</p><ul>
+<li>Clang 19.1.6</li>
 <li>CMake 3.31.3</li>
 <li>Ninja 1.12.1</li>
 </ul>
